[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=3]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 5.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.5, 10.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.5, 1.5 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 16 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -1, -13.75 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.5, 4.5 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="bottom_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_checker"]
position = Vector2( -0.5, 16.5 )
shape = SubResource( 5 )

[node name="SoundSquash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Effects"

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="bottom_checker" to="." method="_on_bottom_checker_body_entered"]
